--- a/lagerberichte.html
+++ b/lagerberichte.html
@@ -12,7 +12,7 @@
 <link href="css/jcarousel.css" rel="stylesheet" />
 <link href="css/flexslider.css" rel="stylesheet" />
 <link href="css/style.css" rel="stylesheet" />
-
+<link href="/favicon.ico" rel="icon" type="image/vnd.microsoft.icon">
 
 <!-- Theme skin -->
 <link href="skins/default.css" rel="stylesheet" />
@@ -35,22 +35,17 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><span>M</span>oderna</a>
+                    <a class="navbar-brand" href="index.html">Belarus Affoltern</a>
                 </div>
                 <div class="navbar-collapse collapse ">
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Home</a></li>
-                        <li class="dropdown ">
-                            <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Features <b class=" icon-angle-down"></b></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="typography.html">Typography</a></li>
-                                <li><a href="components.html">Components</a></li>
-								<li><a href="pricingbox.html">Pricing box</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li class="active"><a href="blog.html">Blog</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="verein.html">Verein</a></li>
+                        <li><a href="vereinstaetigkeit.html">Vereinstätigkeit</a></li>
+						<li><a href="projektberichte.html">Projektberichte</a></li>
+						<li class="active"><a href="lagerberichte.html">Lagerberichte</a></li>
+                        <li><a href="kontakt.html">Kontakt</a></li>
+                        <li><a href="spenden.html">Spenden</a></li>
                     </ul>
                 </div>
             </div>
