--- a/spenden.html
+++ b/spenden.html
@@ -12,7 +12,7 @@
 <link href="css/jcarousel.css" rel="stylesheet" />
 <link href="css/flexslider.css" rel="stylesheet" />
 <link href="css/style.css" rel="stylesheet" />
-
+<link href="/favicon.ico" rel="icon" type="image/vnd.microsoft.icon">
 
 <!-- Theme skin -->
 <link href="skins/default.css" rel="stylesheet" />
@@ -25,7 +25,6 @@
 </head>
 <body>
 <div id="wrapper">
-
 	<!-- start header -->
 	<header>
         <div class="navbar navbar-default navbar-static-top">
@@ -42,7 +41,9 @@
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="verein.html">Verein</a></li>
+                        <li><a href="vereinstaetigkeit.html">Vereinstätigkeit</a></li>
                         <li><a href="projektberichte.html">Projektberichte</a></li>
+						<li><a href="lagerberichte.html">Lagerberichte</a></li>
                         <li><a href="kontakt.html">Kontakt</a></li>
                         <li class="active"><a href="spenden.html">Spenden</a></li>
                     </ul>
