--- a/lagerberichte.html
+++ b/lagerberichte.html
@@ -58,7 +58,7 @@
 			<div class="col-lg-12">
 				<ul class="breadcrumb">
 					<li><a href="#"><i class="fa fa-home"></i></a><i class="icon-angle-right"></i></li>
-					<li class="active">Blog</li>
+					<li class="active">Lagerberichte</li>
 				</ul>
 			</div>
 		</div>
