--- a/vereinstaetigkeit.html
+++ b/vereinstaetigkeit.html
@@ -58,8 +58,7 @@
 			<div class="col-lg-12">
 				<ul class="breadcrumb">
 					<li><a href="#"><i class="fa fa-home"></i></a><i class="icon-angle-right"></i></li>
-					<li><a href="#">Features</a><i class="icon-angle-right"></i></li>
-					<li class="active">Components</li>
+					<li class="active">Vereinstätigkeit</li>
 				</ul>
 			</div>
 		</div>
