--- a/kontakt.html
+++ b/kontakt.html
@@ -67,34 +67,72 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12">
-				<h4>Get in touch with us by filling <strong>contact form below</strong></h4>
+				
+				<h2>Kontakt</h2>
+				
+				<table>
+					<tbody>
+						<tr>
+							<th>Name</th>
+							<th>Vorname</th>
+							<th>Aufgabe</th>
+							<th>Adresse</th>
+							<th>PLZ</th>
+							<th>Wohnort</th>
+							<th>Telefon</th>
+						</tr>
+						<tr>
+							<td>Künzi</td>
+							<td>Ruedi</td>
+							<td>Gesamtleitung</td>
+							<td>Steinbüllenstr.&nbsp;25</td>
+							<td>8933</td>
+							<td>Maschwanden</td>
+							<td>044&nbsp;767&nbsp;14&nbsp;23</td>
+						</tr>
+						<tr>
+							<td>Albrecht</td>
+							<td>Iris</td>
+							<td>Aktuarin</td>
+							<td>Mühlebergstr.&nbsp;30</td>
+							<td>8910</td>
+							<td>Affoltern&nbsp;a.A.</td>
+							<td>044&nbsp;761&nbsp;86&nbsp;08</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+ 		<div class="row">
+			<div class="col-lg-12">
+  				<h4>Oder füllen Sie das nachfolgende Kontaktformular aus</h4>
 				<form id="contactform" action="contact/contact.php" method="post" class="validateform" name="send-contact">
 					<div id="sendmessage">
-						 Your message has been sent. Thank you!
+						 Ihre Nachricht wurde versandt. Vielen Dank!
 					</div>
 					<div class="row">
 						<div class="col-lg-4 field">
-							<input type="text" name="name" placeholder="* Enter your full name" data-rule="maxlen:4" data-msg="Please enter at least 4 chars" />
+							<input type="text" name="name" placeholder="* Geben Sie Ihren vollständigen Namen ein" data-rule="maxlen:4" data-msg="Bitte mindestens 4 Zeichen eingeben" />
 							<div class="validation">
 							</div>
 						</div>
 						<div class="col-lg-4 field">
-							<input type="text" name="email" placeholder="* Enter your email address" data-rule="email" data-msg="Please enter a valid email" />
+							<input type="text" name="email" placeholder="* Geben Sie Ihre E-Mail Adresse ein" data-rule="email" data-msg="Bitte eine gültige E-Mail Adresse eingeben" />
 							<div class="validation">
 							</div>
 						</div>
 						<div class="col-lg-4 field">
-							<input type="text" name="subject" placeholder="Enter your subject" data-rule="maxlen:4" data-msg="Please enter at least 4 chars" />
+							<input type="text" name="subject" placeholder="Geben Sie eine Beschreibung ein" data-rule="maxlen:4" data-msg="Bitte mindestens 4 Zeichen eingeben" />
 							<div class="validation">
 							</div>
 						</div>
 						<div class="col-lg-12 margintop10 field">
-							<textarea rows="12" name="message" class="input-block-level" placeholder="* Your message here..." data-rule="required" data-msg="Please write something"></textarea>
+							<textarea rows="12" name="message" class="input-block-level" placeholder="* Ihre Nachricht..." data-rule="required" data-msg="Bitte geben Sie eine Nachricht ein"></textarea>
 							<div class="validation">
 							</div>
 							<p>
-								<button class="btn btn-theme margintop10 pull-left" type="submit">Submit message</button>
-								<span class="pull-right margintop20">* Please fill all required form field, thanks!</span>
+								<button class="btn btn-theme margintop10 pull-left" type="submit">Absenden</button>
+								<span class="pull-right margintop20">* Bitte geben Sie alle benötigten Daten ein.</span>
 							</p>
 						</div>
 					</div>
@@ -104,62 +142,13 @@
 	</div>
 	</section>
 	<footer>
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-3">
-				<div class="widget">
-					<h5 class="widgetheading">Get in touch with us</h5>
-					<address>
-					<strong>Moderna company Inc</strong><br>
-					 Modernbuilding suite V124, AB 01<br>
-					 Someplace 16425 Earth </address>
-					<p>
-						<i class="icon-phone"></i> (123) 456-7890 - (123) 555-7891 <br>
-						<i class="icon-envelope-alt"></i> email@domainname.com
-					</p>
-				</div>
-			</div>
-			<div class="col-lg-3">
-				<div class="widget">
-					<h5 class="widgetheading">Pages</h5>
-					<ul class="link-list">
-						<li><a href="#">Press release</a></li>
-						<li><a href="#">Terms and conditions</a></li>
-						<li><a href="#">Privacy policy</a></li>
-						<li><a href="#">Career center</a></li>
-						<li><a href="#">Contact us</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-lg-3">
-				<div class="widget">
-					<h5 class="widgetheading">Latest posts</h5>
-					<ul class="link-list">
-						<li><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a></li>
-						<li><a href="#">Pellentesque et pulvinar enim. Quisque at tempor ligula</a></li>
-						<li><a href="#">Natus error sit voluptatem accusantium doloremque</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-lg-3">
-				<div class="widget">
-					<h5 class="widgetheading">Flickr photostream</h5>
-					<div class="flickr_badge">
-						<script type="text/javascript" src="http://www.flickr.com/badge_code_v2.gne?count=8&amp;display=random&amp;size=s&amp;layout=x&amp;source=user&amp;user=34178660@N03"></script>
-					</div>
-					<div class="clear">
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
 	<div id="sub-footer">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6">
 					<div class="copyright">
 						<p>
-							<span>&copy; Moderna 2014 All right reserved. By </span><a href="http://bootstraptaste.com" target="_blank">Bootstraptaste</a>
+							<span>Design base on template <a href="http://bootstraptaste.com/free-bootstrap-template-corporate-moderna/">Moderna</a> by </span><a href="http://bootstraptaste.com" target="_blank">Bootstraptaste</a>
 						</p>
 					</div>
 				</div>
@@ -167,9 +156,6 @@
 					<ul class="social-network">
 						<li><a href="#" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
 						<li><a href="#" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="#" data-placement="top" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-						<li><a href="#" data-placement="top" title="Pinterest"><i class="fa fa-pinterest"></i></a></li>
-						<li><a href="#" data-placement="top" title="Google plus"><i class="fa fa-google-plus"></i></a></li>
 					</ul>
 				</div>
 			</div>
