new version of fontawesome completed 'Verein', 'Vereinstätigkeit'  and 'Projektberichte'

--- a/projektberichte.html
+++ b/projektberichte.html
@@ -62,176 +62,30 @@
 			</div>
 		</div>
 	</div>
+	</section>
 	<section id="content">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12">
-				<h4>Example on <strong>3 columns</strong></h4>
-			</div>
-			<div class="col-lg-4">
-				<div class="pricing-box-alt">
-					<div class="pricing-heading">
-						<h3>Very <strong>Basic</strong></h3>
-					</div>
-					<div class="pricing-terms">
-						<h6>&#36;15.00 / Month</h6>
-					</div>
-					<div class="pricing-content">
-						<ul>
-							<li><i class="icon-ok"></i> 100 applications</li>
-							<li><i class="icon-ok"></i> 24x7 support available</li>
-							<li><i class="icon-ok"></i> No hidden fees</li>
-							<li><i class="icon-ok"></i> Free 30-days trial</li>
-							<li><i class="icon-ok"></i> Stop anytime easily</li>
-						</ul>
-					</div>
-					<div class="pricing-action">
-						<a href="#" class="btn btn-medium btn-theme"><i class="icon-bolt"></i> Register now</a>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4">
-				<div class="pricing-box-alt special">
-					<div class="pricing-heading">
-						<h3>Good <strong>Choice</strong></h3>
-					</div>
-					<div class="pricing-terms">
-						<h6>&#36;25.00 / Month</h6>
-					</div>
-					<div class="pricing-content">
-						<ul>
-							<li><i class="icon-ok"></i> 100 applications</li>
-							<li><i class="icon-ok"></i> 24x7 support available</li>
-							<li><i class="icon-ok"></i> No hidden fees</li>
-							<li><i class="icon-ok"></i> Free 30-days trial</li>
-							<li><i class="icon-ok"></i> Stop anytime easily</li>
-						</ul>
-					</div>
-					<div class="pricing-action">
-						<a href="#" class="btn btn-medium btn-theme"><i class="icon-bolt"></i> Register now</a>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4">
-				<div class="pricing-box-alt">
-					<div class="pricing-heading">
-						<h3>Just <strong>Happy</strong></h3>
-					</div>
-					<div class="pricing-terms">
-						<h6>&#36;35.00 / Month</h6>
-					</div>
-					<div class="pricing-content">
-						<ul>
-							<li><i class="icon-ok"></i> 100 applications</li>
-							<li><i class="icon-ok"></i> 24x7 support available</li>
-							<li><i class="icon-ok"></i> No hidden fees</li>
-							<li><i class="icon-ok"></i> Free 30-days trial</li>
-							<li><i class="icon-ok"></i> Stop anytime easily</li>
-						</ul>
-					</div>
-					<div class="pricing-action">
-						<a href="#" class="btn btn-medium btn-theme"><i class="icon-bolt"></i> Register now</a>
-					</div>
-				</div>
+				<h2>Projektberichte</h2>
 			</div>
 		</div>
-		<!-- divider -->
 		<div class="row">
-			<div class="col-lg-12">
-				<div class="solidline">
-				</div>
-			</div>
-		</div>
-		<!-- end divider -->
-		<div class="row">
-			<div class="col-lg-12">
-				<h4>Example on <strong>4 columns</strong></h4>
-			</div>
 			<div class="col-lg-3">
-				<div class="pricing-box-alt">
-					<div class="pricing-heading">
-						<h3>Very <strong>Basic</strong></h3>
+				<div class="box">
+					<div class="box-gray aligncenter">
+						<h4>Projektbericht 2012</h4>
+						<div class="icon">
+						<i class="fa fa-file-pdf-o fa-3x"></i>
+						</div>
+						<p class="">
+						 Diabetesschulung Minsk.<br />
+						 Vom 9. bis 13. Februar 2012
+						</p>
+							
 					</div>
-					<div class="pricing-terms">
-						<h6>&#36;15.00 / Month</h6>
-					</div>
-					<div class="pricing-content">
-						<ul>
-							<li><i class="icon-ok"></i> 100 applications</li>
-							<li><i class="icon-ok"></i> 24x7 support available</li>
-							<li><i class="icon-ok"></i> No hidden fees</li>
-							<li><i class="icon-ok"></i> Free 30-days trial</li>
-							<li><i class="icon-ok"></i> Stop anytime easily</li>
-						</ul>
-					</div>
-					<div class="pricing-action">
-						<a href="#" class="btn btn-medium btn-theme"><i class="icon-bolt"></i> Register now</a>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-3">
-				<div class="pricing-box-alt">
-					<div class="pricing-heading">
-						<h3>Simple <strong>Choice</strong></h3>
-					</div>
-					<div class="pricing-terms">
-						<h6>&#36;20.00 / Month</h6>
-					</div>
-					<div class="pricing-content">
-						<ul>
-							<li><i class="icon-ok"></i> 100 applications</li>
-							<li><i class="icon-ok"></i> 24x7 support available</li>
-							<li><i class="icon-ok"></i> No hidden fees</li>
-							<li><i class="icon-ok"></i> Free 30-days trial</li>
-							<li><i class="icon-ok"></i> Stop anytime easily</li>
-						</ul>
-					</div>
-					<div class="pricing-action">
-						<a href="#" class="btn btn-medium btn-theme"><i class="icon-bolt"></i> Register now</a>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-3">
-				<div class="pricing-box-alt special">
-					<div class="pricing-heading">
-						<h3>Special <strong>Choice</strong></h3>
-					</div>
-					<div class="pricing-terms">
-						<h6>&#36;15.00 / Month</h6>
-					</div>
-					<div class="pricing-content">
-						<ul>
-							<li><i class="icon-ok"></i> 100 applications</li>
-							<li><i class="icon-ok"></i> 24x7 support available</li>
-							<li><i class="icon-ok"></i> No hidden fees</li>
-							<li><i class="icon-ok"></i> Free 30-days trial</li>
-							<li><i class="icon-ok"></i> Stop anytime easily</li>
-						</ul>
-					</div>
-					<div class="pricing-action">
-						<a href="#" class="btn btn-medium btn-theme"><i class="icon-bolt"></i> Register now</a>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-3">
-				<div class="pricing-box-alt">
-					<div class="pricing-heading">
-						<h3>Just <strong>Happy</strong></h3>
-					</div>
-					<div class="pricing-terms">
-						<h6>&#36;15.00 / Month</h6>
-					</div>
-					<div class="pricing-content">
-						<ul>
-							<li><i class="icon-ok"></i> 100 applications</li>
-							<li><i class="icon-ok"></i> 24x7 support available</li>
-							<li><i class="icon-ok"></i> No hidden fees</li>
-							<li><i class="icon-ok"></i> Free 30-days trial</li>
-							<li><i class="icon-ok"></i> Stop anytime easily</li>
-						</ul>
-					</div>
-					<div class="pricing-action">
-						<a href="#" class="btn btn-medium btn-theme"><i class="icon-bolt"></i> Register now</a>
+					<div class="box-bottom">
+						<a href="files/bericht_projekt_2012_spender.pdf">Bericht lesen</a>
 					</div>
 				</div>
 			</div>
@@ -239,62 +93,13 @@
 	</div>
 	</section>
 	<footer>
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-3">
-				<div class="widget">
-					<h5 class="widgetheading">Get in touch with us</h5>
-					<address>
-					<strong>Moderna company Inc</strong><br>
-					 Modernbuilding suite V124, AB 01<br>
-					 Someplace 16425 Earth </address>
-					<p>
-						<i class="icon-phone"></i> (123) 456-7890 - (123) 555-7891 <br>
-						<i class="icon-envelope-alt"></i> email@domainname.com
-					</p>
-				</div>
-			</div>
-			<div class="col-lg-3">
-				<div class="widget">
-					<h5 class="widgetheading">Pages</h5>
-					<ul class="link-list">
-						<li><a href="#">Press release</a></li>
-						<li><a href="#">Terms and conditions</a></li>
-						<li><a href="#">Privacy policy</a></li>
-						<li><a href="#">Career center</a></li>
-						<li><a href="#">Contact us</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-lg-3">
-				<div class="widget">
-					<h5 class="widgetheading">Latest posts</h5>
-					<ul class="link-list">
-						<li><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a></li>
-						<li><a href="#">Pellentesque et pulvinar enim. Quisque at tempor ligula</a></li>
-						<li><a href="#">Natus error sit voluptatem accusantium doloremque</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-lg-3">
-				<div class="widget">
-					<h5 class="widgetheading">Flickr photostream</h5>
-					<div class="flickr_badge">
-						<script type="text/javascript" src="http://www.flickr.com/badge_code_v2.gne?count=8&amp;display=random&amp;size=s&amp;layout=x&amp;source=user&amp;user=34178660@N03"></script>
-					</div>
-					<div class="clear">
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
 	<div id="sub-footer">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6">
 					<div class="copyright">
 						<p>
-							<span>&copy; Moderna 2014 All right reserved. By </span><a href="http://bootstraptaste.com" target="_blank">Bootstraptaste</a>
+							<span>Design base on template <a href="http://bootstraptaste.com/free-bootstrap-template-corporate-moderna/">Moderna</a> by </span><a href="http://bootstraptaste.com" target="_blank">Bootstraptaste</a>
 						</p>
 					</div>
 				</div>
@@ -302,9 +107,6 @@
 					<ul class="social-network">
 						<li><a href="#" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
 						<li><a href="#" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="#" data-placement="top" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-						<li><a href="#" data-placement="top" title="Pinterest"><i class="fa fa-pinterest"></i></a></li>
-						<li><a href="#" data-placement="top" title="Google plus"><i class="fa fa-google-plus"></i></a></li>
 					</ul>
 				</div>
 			</div>
