--- a/verein.html
+++ b/verein.html
@@ -65,283 +65,45 @@
 	</section>
 	<section id="content">
 	<div class="container">
-		<div class="row">
-			<div class="col-lg-4">
-				<h4>H1-H6 Heading style</h4>
-				<h1>Heading H1</h1>
-				<h2>Heading H2</h2>
-				<h3>Heading H3</h3>
-				<h4>Heading H4</h4>
-				<h5>Heading H5</h5>
-				<h6>Heading H6</h6>
-			</div>
-			<div class="col-lg-4">
-				<h4>Example of paragraph</h4>
-				<p>
-					<strong>Lorem ipsum dolor sit amet</strong>, consetetur sadipscing elitr, sed diam non mod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+		<div class="row demobtn">
+			<div class="col-lg-12">
+				<h2>Neue Projektausrichtung</h2>
+				<h4>Heutige Situation</h4>
+				<p>Bereits im Jahr 2009 konnten die damals eingeladenen Kinder nicht in den Erholungsurlaub in die Schweiz kommen. 
+					Belarus fordert ein Abkommen mit der Schweiz, das aus verschiedenen staatspolitischen Gründen nicht abgeschlossen werden kann. 
+					Trotz den fortgesetzten Verhandlungen wurden bis heute keine situationsverbessernde Ergebnisse erzielt.
 				</p>
-				<p class="lead">
-					At vero eos et accusam et justo duo dolores et eabum.
+				<h4>Neuer Weg</h4>
+				<p>Die Kerngruppe Projekt Belarus Bezirk Affoltern hat entschieden, die Kinder in Belarus auf eine andere Art zu unterstützen. 
+					Im Vordergrund steht das Projekt für Kinder mit Diabetes in Belarus. 
+					Sie sollen in einem Ferien-Lager lernen, wie der Blutzucker richtig gemessen und das Insulin gespritzt wird. 
+					Ernährungsschulung ist auch im Programm. Die Zusammenarbeit erfolgt weiterhin mit der Stiftung „Den Kindern von Tschernobyl“ in Minsk. 
+					Anlässlich mehrerer Besuche in der Stiftung konnte ich die Leiterin des Diabetesprojektes, Ljudmila Maruschkewitsch, kennen lernen. 
+					Sie ist sehr engagiert, kompetent und vertrauenswürdig und hat schon einige Lager durchgeführt. 
+					Sie erstellt jeweils einen detaillierten Bericht über die Projekte. Daraus ist ersichtlich, wie gearbeitet und wofür das Geld eingesetzt wird. 
+					Die Kerngruppe freut sich, dass die langjährige Aufbauarbeit und die guten Kontakte mit Belarus so in einem neuen Betätigungsfeld genutzt werden können.
 				</p>
-				<p>
-					<em>
-					Consetetur sadipscing elitr, sed diam non mod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. </em>
+				<h4>Danke!</h4>
+				<p>Im Namen der Belarus-Kinder bedanken wir uns herzlich bei Allen, die sich in irgend einer Form für das Projekt engagiert haben. 
+					Dank dem Engagement von so vielen Personen war es möglich, den Kindern einen nachhaltigen Erholungsaufenthalt zu bieten.
 				</p>
-				<p>
-					<small>
-					Consetetur sadipscing elitr, sed diam non mod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. </small>
-				</p>
-			</div>
-			<div class="col-lg-4">
-				<h4>Float image in paragraph</h4>
-				<img src="img/dummies/dummy-1.jpg" alt="" class="align-left" />
-				<p>
-					 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam non mod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et eabum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet
+				<h4>Spenden</h4>
+				<p>Sie können weiterhin unser <a href="spenden.html">Spendenkonto</a> berücksichtigen. Das Geld wird für das Diabetesprojekt eingesetzt. 
+					Es freut uns, wenn Sie die Kinder in Belarus auch weiterhin unterstützen.
 				</p>
 			</div>
-		</div>
-		<!-- divider -->
-		<div class="row">
-			<div class="col-lg-12">
-				<div class="solidline">
-				</div>
-			</div>
-		</div>
-		<!-- end divider -->
-		<!-- Descriptions -->
-		<div class="row">
-			<div class="col-lg-6">
-				<!-- Description -->
-				<h4>Description</h4>
-				<dl>
-					<dt>Description lists</dt>
-					<dd>A description list is perfect for defining terms.</dd>
-					<dt>Euismod</dt>
-					<dd>Vestibulum id ligula porta felis euismod semper eget lacinia odio sem nec elit.</dd>
-					<dd>Donec id elit non mi porta gravida at eget metus.</dd>
-					<dt>Malesuada porta</dt>
-					<dd>Etiam porta sem malesuada magna mollis euismod.</dd>
-				</dl>
-			</div>
-			<!-- Horizontal Description -->
-			<div class="col-lg-6">
-				<h4>Horizontal Description</h4>
-				<dl class="dl-horizontal">
-					<dt>Description lists</dt>
-					<dd>A description list is perfect for defining terms.</dd>
-					<dt>Euismod</dt>
-					<dd>Vestibulum id ligula porta felis euismod semper eget lacinia odio sem nec elit.</dd>
-					<dd>Donec id elit non mi porta gravida at eget metus.</dd>
-					<dt>Malesuada porta</dt>
-					<dd>Etiam porta sem malesuada magna mollis euismod.</dd>
-					<dt>Felis euismod semper eget lacinia</dt>
-					<dd>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</dd>
-				</dl>
-			</div>
-		</div>
-		<!-- divider -->
-		<div class="row">
-			<div class="col-lg-12">
-				<div class="solidline">
-				</div>
-			</div>
-		</div>
-		<!-- end divider -->
-		<!-- Lists -->
-		<div class="row">
-			<!-- Unordered Lists -->
-			<div class="col-lg-3">
-				<h4>Unordered Lists</h4>
-				<ul>
-					<li>Lorem ipsum dolor sit amet</li>
-					<li>Consectetur adipiscing elit</li>
-					<li>Integer molestie lorem at massa</li>
-					<li>Facilisis in pretium nisl aliquet</li>
-					<li>Nulla volutpat aliquam velit
-					<ul>
-						<li>Phasellus iaculis neque</li>
-						<li>Purus sodales ultricies</li>
-						<li>Vestibulum laoreet porttitor sem</li>
-						<li>Ac tristique libero volutpat at</li>
-					</ul>
-					</li>
-					<li>Faucibus porta lacus fringilla vel</li>
-					<li>Aenean sit amet erat nunc</li>
-					<li>Eget porttitor lorem</li>
-				</ul>
-			</div>
-			<!-- Unstyled Lists -->
-			<div class="col-lg-3">
-				<h4>Unstyled Lists</h4>
-				<ul class="unstyled">
-					<li>Lorem ipsum dolor sit amet</li>
-					<li>Consectetur adipiscing elit</li>
-					<li>Integer molestie lorem at massa</li>
-					<li>Facilisis in pretium nisl aliquet</li>
-					<li>Nulla volutpat aliquam velit
-					<ul>
-						<li>Phasellus iaculis neque</li>
-						<li>Purus sodales ultricies</li>
-						<li>Vestibulum laoreet porttitor sem</li>
-						<li>Ac tristique libero volutpat at</li>
-					</ul>
-					</li>
-					<li>Faucibus porta lacus fringilla vel</li>
-					<li>Aenean sit amet erat nunc</li>
-					<li>Eget porttitor lorem</li>
-				</ul>
-			</div>
-			<!-- Ordered Lists -->
-			<div class="col-lg-3">
-				<h4>Ordered Lists</h4>
-				<ol>
-					<li>Lorem ipsum dolor sit amet</li>
-					<li>Consectetur adipiscing elit</li>
-					<li>Integer molestie lorem at massa</li>
-					<li>Facilisis in pretium nisl aliquet</li>
-					<li>Nulla volutpat aliquam velit
-					<ol>
-						<li>Phasellus iaculis neque</li>
-						<li>Purus sodales ultricies</li>
-						<li>Vestibulum laoreet porttitor sem</li>
-						<li>Ac tristique libero volutpat at</li>
-					</ol>
-					</li>
-					<li>Faucibus porta lacus fringilla vel</li>
-					<li>Aenean sit amet erat nunc</li>
-					<li>Eget porttitor lorem</li>
-				</ol>
-			</div>
-			<!-- Unstyled Lists -->
-			<div class="col-lg-3">
-				<h4>Unstyled Lists</h4>
-				<ol class="unstyled">
-					<li>Lorem ipsum dolor sit amet</li>
-					<li>Consectetur adipiscing elit</li>
-					<li>Integer molestie lorem at massa</li>
-					<li>Facilisis in pretium nisl aliquet</li>
-					<li>Nulla volutpat aliquam velit
-					<ol>
-						<li>Phasellus iaculis neque</li>
-						<li>Purus sodales ultricies</li>
-						<li>Vestibulum laoreet porttitor sem</li>
-						<li>Ac tristique libero volutpat at</li>
-					</ol>
-					</li>
-					<li>Faucibus porta lacus fringilla vel</li>
-					<li>Aenean sit amet erat nunc</li>
-					<li>Eget porttitor lorem</li>
-				</ol>
-			</div>
-		</div>
-		<!-- divider -->
-		<div class="row">
-			<div class="col-lg-12">
-				<div class="solidline">
-				</div>
-			</div>
-		</div>
-		<!-- end divider -->
-		<div class="row">
-			<div class="col-lg-4">
-				<h4>Blockquote</h4>
-				<blockquote>
-					<i class="icon-quote-left icon-2x"></i> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam non mod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-				</blockquote>
-			</div>
-			<div class="col-lg-4">
-				<h4>Blockquote and cite</h4>
-				<blockquote>
-					<i class="icon-quote-left icon-2x"></i> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam non mod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. <cite>John doe, Awesome Inc.</cite>
-				</blockquote>
-			</div>
-			<div class="col-lg-4">
-				<h4>Pullquote left and right</h4>
-				<span class="pullquote-left">
-				Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam non mod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. </span>
-				<span class="pullquote-right margintop10">
-				Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam non mod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. </span>
-			</div>
-		</div>
-		<!-- divider -->
-		<div class="row">
-			<div class="col-lg-12">
-				<div class="solidline">
-				</div>
-			</div>
-		</div>
-		<!-- end divider -->
-		<div class="row">
-			<div class="col-lg-12">
-				<h4>Preformatted text</h4>
-				<pre class="prettyprint linenums">
-					 &lt;div class="col-lg-12"&gt;<br />
-					 &nbsp;&nbsp;&lt;p&gt;Lorem ipsum dolor sit amet, consetetur sadipscing elitr..&lt;/p&gt;<br />
-					 &nbsp;&nbsp;&lt;p&gt;Lorem ipsum dolor sit amet, consetetur sadipscing elitr..&lt;/p&gt;<br />
-					 &nbsp;&nbsp;&lt;p&gt;Lorem ipsum dolor sit amet, consetetur sadipscing elitr..&lt;/p&gt;<br />
-					 &lt;/div&gt;
-				</pre>
-			</div>
+			<!-- end col-lg-12 -->
 		</div>
 	</div>
 	</section>
 	<footer>
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-3">
-				<div class="widget">
-					<h5 class="widgetheading">Get in touch with us</h5>
-					<address>
-					<strong>Moderna company Inc</strong><br>
-					 Modernbuilding suite V124, AB 01<br>
-					 Someplace 16425 Earth </address>
-					<p>
-						<i class="icon-phone"></i> (123) 456-7890 - (123) 555-7891 <br>
-						<i class="icon-envelope-alt"></i> email@domainname.com
-					</p>
-				</div>
-			</div>
-			<div class="col-lg-3">
-				<div class="widget">
-					<h5 class="widgetheading">Pages</h5>
-					<ul class="link-list">
-						<li><a href="#">Press release</a></li>
-						<li><a href="#">Terms and conditions</a></li>
-						<li><a href="#">Privacy policy</a></li>
-						<li><a href="#">Career center</a></li>
-						<li><a href="#">Contact us</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-lg-3">
-				<div class="widget">
-					<h5 class="widgetheading">Latest posts</h5>
-					<ul class="link-list">
-						<li><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a></li>
-						<li><a href="#">Pellentesque et pulvinar enim. Quisque at tempor ligula</a></li>
-						<li><a href="#">Natus error sit voluptatem accusantium doloremque</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-lg-3">
-				<div class="widget">
-					<h5 class="widgetheading">Flickr photostream</h5>
-					<div class="flickr_badge">
-						<script type="text/javascript" src="http://www.flickr.com/badge_code_v2.gne?count=8&amp;display=random&amp;size=s&amp;layout=x&amp;source=user&amp;user=34178660@N03"></script>
-					</div>
-					<div class="clear">
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
 	<div id="sub-footer">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6">
 					<div class="copyright">
 						<p>
-							<span>&copy; Moderna 2014 All right reserved. By </span><a href="http://bootstraptaste.com" target="_blank">Bootstraptaste</a>
+							<span>Design base on template <a href="http://bootstraptaste.com/free-bootstrap-template-corporate-moderna/">Moderna</a> by </span><a href="http://bootstraptaste.com" target="_blank">Bootstraptaste</a>
 						</p>
 					</div>
 				</div>
@@ -349,9 +111,6 @@
 					<ul class="social-network">
 						<li><a href="#" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
 						<li><a href="#" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="#" data-placement="top" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-						<li><a href="#" data-placement="top" title="Pinterest"><i class="fa fa-pinterest"></i></a></li>
-						<li><a href="#" data-placement="top" title="Google plus"><i class="fa fa-google-plus"></i></a></li>
 					</ul>
 				</div>
 			</div>
