updated verrein and spenden

--- a/spenden.html
+++ b/spenden.html
@@ -69,23 +69,19 @@
 			<div class="col-lg-12">
 				<h2>Spenden</h2>
 				<p>
-					<strong>PC-Konto: 60-174261-3</strong><br />
-					Einzahlung für:<br />
 					Verein Belarus Diabetes<br />
 					8910 Affoltern a. A.<br />
-					<strong>IBAN: CH 13 0900 0000 6017 4261 3</strong>
+					PC-Konto: 60-174261-3<br />
+					IBAN: CH 13 0900 0000 6017 4261 3<br />
+					<strong>Herzlichen Dank!</strong>
 				</p>
 				<h2>Wie kann ich helfen?</h2>
 				<p>
-					Die Menschen in Belarus verfügen über fast kein Geld und darum ist jede Form von finanzieller Hilfe sehr wertvoll. 
-					Die Unterstützung des Diabetes-Projekts in Belarus ermöglicht Kindern den richtigen Umgang mit Diabetes und hilft Spätfolgen zu minimieren.
+					Viele Menschen in Belarus haben wenig Geld und darum ist jede Form von finanzieller Hilfe sehr wertvoll. 
+					Die Unterstützung des Diabetes-Projekts in Belarus ermöglicht Kindern den richtigen Umgang mit Diabetes und hilft Spätfolgen zu minimieren. 
 				</p>
-				<p>
+				<p class="bigger">
 					Helfen Sie den Diabetes-Kindern mit Ihrer Spende!
-				</p>
-				<h2>Einzahlung von Geld</h2>
-				<p>
-					Jede Spende ist herzlich willkommen und kann unter <strong>PC-Konto 60-174261-3</strong> gerne einbezahlt werden.
 				</p>
 			</div>
 		</div>
