--- a/verein.html
+++ b/verein.html
@@ -67,30 +67,19 @@
 	<div class="container">
 		<div class="row demobtn">
 			<div class="col-lg-12">
-				<h2>Neue Projektausrichtung</h2>
-				<h4>Heutige Situation</h4>
-				<p>Bereits im Jahr 2009 konnten die damals eingeladenen Kinder nicht in den Erholungsurlaub in die Schweiz kommen. 
-					Belarus fordert ein Abkommen mit der Schweiz, das aus verschiedenen staatspolitischen Gründen nicht abgeschlossen werden kann. 
-					Trotz den fortgesetzten Verhandlungen wurden bis heute keine situationsverbessernde Ergebnisse erzielt.
+				<h2>Verein</h2>
+				<p>Der Verein Belarus Diabetes hat sich aus dem „Projekt Belarus Bezirk Affoltern“ gebildet. 
+					Dieses organisierte zwischen 2002 und 2008 Aufenthalte zur Erholung für strahlengeschädigte Tschernobyl-Kinder aus Belarus. 
+					In dieser Zeit weilten insgesamt 140 Kinder im Bezirk Affoltern.<br />
+					2013 wurde der Verein „Belarus Diabetes“ gegründet. 
+					Jährlich wurden 2 bis 3 Schulungen mit je 6 Kindern mit Ihren Eltern unterstützt. 
+					Wir wollen benachteiligten Diabetes-Kinder von Belarus helfen, damit sie ein möglichst normales Leben führen  können.
 				</p>
-				<h4>Neuer Weg</h4>
-				<p>Die Kerngruppe Projekt Belarus Bezirk Affoltern hat entschieden, die Kinder in Belarus auf eine andere Art zu unterstützen. 
-					Im Vordergrund steht das Projekt für Kinder mit Diabetes in Belarus. 
-					Sie sollen in einem Ferien-Lager lernen, wie der Blutzucker richtig gemessen und das Insulin gespritzt wird. 
-					Ernährungsschulung ist auch im Programm. Die Zusammenarbeit erfolgt weiterhin mit der Stiftung „Den Kindern von Tschernobyl“ in Minsk. 
-					Anlässlich mehrerer Besuche in der Stiftung konnte ich die Leiterin des Diabetesprojektes, Ljudmila Maruschkewitsch, kennen lernen. 
-					Sie ist sehr engagiert, kompetent und vertrauenswürdig und hat schon einige Lager durchgeführt. 
-					Sie erstellt jeweils einen detaillierten Bericht über die Projekte. Daraus ist ersichtlich, wie gearbeitet und wofür das Geld eingesetzt wird. 
-					Die Kerngruppe freut sich, dass die langjährige Aufbauarbeit und die guten Kontakte mit Belarus so in einem neuen Betätigungsfeld genutzt werden können.
-				</p>
-				<h4>Danke!</h4>
-				<p>Im Namen der Belarus-Kinder bedanken wir uns herzlich bei Allen, die sich in irgend einer Form für das Projekt engagiert haben. 
-					Dank dem Engagement von so vielen Personen war es möglich, den Kindern einen nachhaltigen Erholungsaufenthalt zu bieten.
-				</p>
-				<h4>Spenden</h4>
-				<p>Sie können weiterhin unser <a href="spenden.html">Spendenkonto</a> berücksichtigen. Das Geld wird für das Diabetesprojekt eingesetzt. 
-					Es freut uns, wenn Sie die Kinder in Belarus auch weiterhin unterstützen.
-				</p>
+				<p>Mit einer Mitgliedschaft unterstützen Sie uns ideell oder finanziell.</p>
+				<ul class="unstyled">
+					<li><a href="files/statuten.pdf">Statuten</a></li>
+					<li><a href="files/aufnahmegesuch.pdf">Antrag Mitgliedschaft</a></li>
+				</ul>
 			</div>
 			<!-- end col-lg-12 -->
 		</div>
