--- a/projektberichte.html
+++ b/projektberichte.html
@@ -74,6 +74,23 @@
 			<div class="col-lg-3">
 				<div class="box">
 					<div class="box-gray aligncenter">
+						<h4>Projektbericht 2015</h4>
+						<div class="icon">
+						<i class="fa fa-file-pdf-o fa-3x"></i>
+						</div>
+						<p class="">
+						 Diabetesschulung Minsk.<br />
+						 Vom 29. bis 31. Mai 2015
+						</p>
+					</div>
+					<div class="box-bottom">
+						<a href="files/bericht_projekt_2015_spender.pdf">Bericht lesen</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-3">
+				<div class="box">
+					<div class="box-gray aligncenter">
 						<h4>Projektbericht 2012</h4>
 						<div class="icon">
 						<i class="fa fa-file-pdf-o fa-3x"></i>
@@ -82,7 +99,6 @@
 						 Diabetesschulung Minsk.<br />
 						 Vom 9. bis 13. Februar 2012
 						</p>
-							
 					</div>
 					<div class="box-bottom">
 						<a href="files/bericht_projekt_2012_spender.pdf">Bericht lesen</a>
