new slide pictures and texts

--- a/index.html
+++ b/index.html
@@ -60,30 +60,40 @@
         <div id="main-slider" class="flexslider">
             <ul class="slides">
               <li>
-                <img src="img/slides/1.png" alt="" />
+                <img src="img/slides/1.jpg" alt="Ludmila Maruschkewitsch (links) mit der Ärztin Anna und der Krankenschwester Jelena" />
                 <div class="flex-caption">
-                    <h3>Projekte</h3> 
-					<p>Die Kursleiterin erklärt den Zusammenhang zwischen Essen und Blutzuckerwert.</p> 
-					<a href="projektberichte.html" class="btn btn-theme">Mehr Information</a>
+					<p>Ludmila Maruschkewitsch (links) mit der Ärztin Anna und der Krankenschwester Jelena</p> 
+					<a href="verein.html" class="btn btn-theme">Der Verein</a>
                 </div>
               </li>
               <li>
-                <img src="img/slides/2.png" alt="" />
+                <img src="img/slides/4.jpg" alt="Anastasja aus einem Kinderheim" />
                 <div class="flex-caption">
-                    <h3>Verein</h3> 
-					<p>Die Kursleiterin erklärt das Testgerät.</p> 
-					<a href="verein.html" class="btn btn-theme">Learn More</a>
+					<p>Anastasja aus einem Kinderheim.</p> 
+					<a href="vereinstaetigkeit.html" class="btn btn-theme">Vereinstätigkeit</a>
                 </div>
               </li>
               <li>
-                <img src="img/slides/3.png" alt="" />
+                <img src="img/slides/2.jpg" alt="Aufmerksame Eltern" />
                 <div class="flex-caption">
-                    <h3>Ihre Spende hilft.</h3> 
-					<p>Jede Spende ist wichtig.</p> 
+  					<p>Aufmerksame Eltern</p> 
+					<a href="projektberichte.html" class="btn btn-theme">Projektberichte</a>
+                </div>
+              </li>
+              <li>
+                <img src="img/slides/3.jpg" alt="Famile Staschkewitsch mit Ruedi Künzi (mitte)" />
+                <div class="flex-caption">
+					<p>Famile Staschkewitsch mit Ruedi Künzi (mitte)</p> 
+					<a href="kontakt.html" class="btn btn-theme">Kontakt</a>
+                </div>
+              </li>
+              <li>
+                <img src="img/slides/5.jpg" alt="Gljeb sagt ein Gedicht auf" />
+                <div class="flex-caption">
+					<p>Gljeb sagt ein Gedicht auf.</p> 
 					<a href="spenden.html" class="btn btn-theme">Jetzt spenden</a>
                 </div>
-              </li>
-            </ul>
+              </li>            </ul>
         </div>
 	<!-- end slider -->
 			</div>
