--- a/vereinstaetigkeit.html
+++ b/vereinstaetigkeit.html
@@ -65,9 +65,13 @@
 	</section>
 	<section id="content">
 	<div class="container">
-		<div class="row demobtn">
+		<div class="row">
 			<div class="col-lg-12">
 				<h2>Unser Projekt</h2>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-8">
 				<h4>Diabetes-Kinder in Belarus</h4>
 				<p>Mit ihren Spenden unterstützt der Verein Belarus Diabetes die Schulungen der Eltern von Kindern mit Diabetes in Belarus (Weissrussland). 
 					Eine lange Zusammenarbeit besteht mit der Stiftung „Freude den Kindern“ in Minsk, die sich seit der Gründung für die Gesundheit der „Tschernobyl-Kinder“ einsetzt. 
@@ -82,7 +86,18 @@
 					Sie zeigen den Eltern und Kindern, wie sie mit Diabetes ein normales Leben führen können. 
 					Dazwischen freuen sie sich an Spiel und Sport.
 				</p>
-
+			</div>
+			<div class="col-lg-4">
+				<p><img src="img/side/side2.jpg" alt="Ludmila bespricht mit der Mutter die Insulinmengen" /></p>
+				<p class="small">Ludmila bespricht mit der Mutter die Insulinmengen</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-4">
+				<p><img src="img/side/side3.jpg" alt="Spass im Schwimmbad" /></p>
+				<p class="small">Spass im Schwimmbad</p>
+			</div>
+			<div class="col-lg-8">
 				<h4>Eltern verzweifelt</h4>
 				<p>Die Eltern der Kinder können die notwendigen Messgeräte aus finanziellen Gründen nicht kaufen. 
 					Die Insulineinstellung ist daher ungenau. 
@@ -96,7 +111,10 @@
 				<p>Die Leiterin der Diabetes-Schulung, Ludmila Maruschkewitsch, ist selber Diabetikerin und hat den Umgang mit dieser Krankheit in Deutschland erlernt. 
 					Sie kennt die Schwierigkeiten aus eigener Erfahrung und gibt ihr Wissen mit viel Herzblut an Kinder und Eltern weiter.
 				</p>
-				
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-12">
 				<h4>Verwendung der Spenden</h4>
 				<p>Ihre Spenden verwenden wir für Messgeräte, Messstreifen, Aufenthalt und Verpflegung im Sanatorium und eine kleine Entschädigung für die Leiterin und die Betreuerinnen.
 				</p>
@@ -104,7 +122,6 @@
 				<p class="bigger">Unterstützen Sie mit einer Spende die Diabetes-Kinder in Belarus und helfen Sie mit, diesen Kindern ein besseres Leben zu ermöglichen.
 				</p>
 			</div>
-			<!-- end col-lg-12 -->
 		</div>
 	</div>
 	</section>
