--- a/spenden.html
+++ b/spenden.html
@@ -68,6 +68,10 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<h2>Spenden</h2>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-8">
 				<p>
 					Verein Belarus Diabetes<br />
 					8910 Affoltern a. A.<br />
@@ -83,6 +87,11 @@
 				<p class="bigger">
 					Helfen Sie den Diabetes-Kindern mit Ihrer Spende!
 				</p>
+			</div>
+			<div class="col-lg-4">
+				<p><img src="img/side/side4.jpg" alt="Blutzucker messen" /></p>
+				<p class="small">Blutzucker messen</p>
+				
 			</div>
 		</div>
 	</div>
