--- a/verein.html
+++ b/verein.html
@@ -65,8 +65,8 @@
 	</section>
 	<section id="content">
 	<div class="container">
-		<div class="row demobtn">
-			<div class="col-lg-12">
+		<div class="row">
+			<div class="col-lg-8">
 				<h2>Verein</h2>
 				<p>Der Verein Belarus Diabetes hat sich aus dem „Projekt Belarus Bezirk Affoltern“ gebildet. 
 					Dieses organisierte zwischen 2002 und 2008 Aufenthalte zur Erholung für strahlengeschädigte Tschernobyl-Kinder aus Belarus. 
@@ -81,7 +81,10 @@
 					<li><a href="files/aufnahmegesuch.pdf">Antrag Mitgliedschaft</a></li>
 				</ul>
 			</div>
-			<!-- end col-lg-12 -->
+			<div class="col-lg-4">
+				<p><img src="img/side/side1.jpg" alt="Ludmila erklärt den Zusammenhang Blutzuckerwert und Insulin" /></p>
+				<p class="small">Ludmila erklärt den Zusammenhang Blutzuckerwert und Insulin</p>
+			</div>
 		</div>
 	</div>
 	</section>
