--- a/kontakt.html
+++ b/kontakt.html
@@ -105,6 +105,12 @@
 		</div>
  		<div class="row">
 			<div class="col-lg-12">
+  				<h4>Facebook</h4>
+				<p><a href="https://www.facebook.com/belarusdiabetes"><i class="fa fa-facebook"></i> Belarus Diabetes bei Facebook</a></p>
+			</div>
+		</div>
+ 		<div class="row">
+			<div class="col-lg-12">
   				<h4>Oder füllen Sie das nachfolgende Kontaktformular aus</h4>
 				<form id="contactform" action="contact/contact.php" method="post" class="validateform" name="send-contact">
 					<div id="sendmessage">
@@ -154,8 +160,8 @@
 				</div>
 				<div class="col-lg-6">
 					<ul class="social-network">
-						<li><a href="#" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="#" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+						<li><a href="https://www.facebook.com/belarusdiabetes" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+						<!--<li><a href="#" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>-->
 					</ul>
 				</div>
 			</div>
