--- a/verein.html
+++ b/verein.html
@@ -101,8 +101,8 @@
 				</div>
 				<div class="col-lg-6">
 					<ul class="social-network">
-						<li><a href="#" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="#" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+						<li><a href="https://www.facebook.com/belarusdiabetes" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+						<!--<li><a href="#" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>-->
 					</ul>
 				</div>
 			</div>
