Last changes before goin live

--- a/kontakt.html
+++ b/kontakt.html
@@ -84,7 +84,7 @@
 						<tr>
 							<td>Künzi</td>
 							<td>Ruedi</td>
-							<td>Gesamtleitung</td>
+							<td>Präsident</td>
 							<td>Steinbüllenstr.&nbsp;25</td>
 							<td>8933</td>
 							<td>Maschwanden</td>
