--- a/verein.html
+++ b/verein.html
@@ -72,7 +72,7 @@
 					Dieses organisierte zwischen 2002 und 2008 Aufenthalte zur Erholung für strahlengeschädigte Tschernobyl-Kinder aus Belarus. 
 					In dieser Zeit weilten insgesamt 140 Kinder im Bezirk Affoltern.<br />
 					2013 wurde der Verein „Belarus Diabetes“ gegründet. 
-					Jährlich wurden 2 bis 3 Schulungen mit je 6 Kindern mit Ihren Eltern unterstützt. 
+					Jährlich werden 2 bis 3 Schulungen mit je 6 Kindern mit Ihren Eltern unterstützt. 
 					Wir wollen benachteiligten Diabetes-Kinder von Belarus helfen, damit sie ein möglichst normales Leben führen  können.
 				</p>
 				<p>Mit einer Mitgliedschaft unterstützen Sie uns ideell oder finanziell.</p>
