--- a/projektberichte.html
+++ b/projektberichte.html
@@ -74,6 +74,23 @@
 			<div class="col-lg-3">
 				<div class="box">
 					<div class="box-gray aligncenter">
+						<h4>Projektbericht 2016</h4>
+						<div class="icon">
+						<i class="fa fa-file-pdf-o fa-3x"></i>
+						</div>
+						<p class="">
+						 Belarus Diabetes<br />
+						 Schulungen 2016
+						</p>
+					</div>
+					<div class="box-bottom">
+						<a href="files/bericht_projekt_2016.pdf">Bericht lesen</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-3">
+				<div class="box">
+					<div class="box-gray aligncenter">
 						<h4>Projektbericht 2015</h4>
 						<div class="icon">
 						<i class="fa fa-file-pdf-o fa-3x"></i>
