changed author meta-tag content

--- a/kontakt.html
+++ b/kontakt.html
@@ -5,7 +5,7 @@
 <title>Belarus Affoltern - Kontakt</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="description" content="" />
-<meta name="author" content="http://bootstraptaste.com" />
+<meta name="author" content="Verein Belarus Diabetes" />
 <!-- css -->
 <link href="css/bootstrap.min.css" rel="stylesheet" />
 <link href="css/fancybox/jquery.fancybox.css" rel="stylesheet">
