Added flyer2016 Added icons for pdf downloads

--- a/spenden.html
+++ b/spenden.html
@@ -87,6 +87,9 @@
 				<p class="bigger">
 					Helfen Sie den Diabetes-Kindern mit Ihrer Spende!
 				</p>
+				<p>
+					Unser <a href="files/flyer2016.pdf"><i class="fa fa-file-pdf-o"></i> Flyer</a> zum downloaden und weiterverteilen.
+				</p>
 			</div>
 			<div class="col-lg-4">
 				<p><img src="img/side/side4.jpg" alt="Blutzucker messen" /></p>
