--- a/verein.html
+++ b/verein.html
@@ -77,8 +77,8 @@
 				</p>
 				<p>Mit einer Mitgliedschaft unterstützen Sie uns ideell oder finanziell.</p>
 				<ul class="unstyled">
-					<li><a href="files/statuten.pdf">Statuten</a></li>
-					<li><a href="files/aufnahmegesuch.pdf">Antrag Mitgliedschaft</a></li>
+					<li><a href="files/statuten.pdf"><i class="fa fa-file-pdf-o"></i> Statuten</a></li>
+					<li><a href="files/aufnahmegesuch.pdf"><i class="fa fa-file-pdf-o"></i> Antrag Mitgliedschaft</a></li>
 				</ul>
 			</div>
 			<div class="col-lg-4">
