added link to flyer in vereinstaetigkeit

--- a/vereinstaetigkeit.html
+++ b/vereinstaetigkeit.html
@@ -123,6 +123,12 @@
 				</p>
 			</div>
 		</div>
+		<div class="row">
+			<div class="col-lg-12">
+				<p>In unserem <a href="files/flyer2016.pdf"><i class="fa fa-file-pdf-o"></i> Flyer</a> finden Sie eine Zusammenfassung der Informationen, die Sie auch gerne weiterverteilen dürfen.
+				</p> 
+			</div>
+		</div>
 	</div>
 	</section>
 	<footer>
