--- a/projektberichte.html
+++ b/projektberichte.html
@@ -27,6 +27,22 @@ navigation_weight: 40
 			<div class="col-lg-3">
 				<div class="box">
 					<div class="box-gray aligncenter">
+						<h4>Projektbericht 2017</h4>
+						<div class="icon">
+						<i class="fa fa-file-pdf-o fa-3x"></i>
+						</div>
+						<p class="">
+							Interview mit Ludmila Maruschkewitsch 
+						</p>
+					</div>
+					<div class="box-bottom">
+						<a href="files/interview_mit_ludmila.pdf">Bericht lesen</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-3">
+				<div class="box">
+					<div class="box-gray aligncenter">
 						<h4>Projektbericht 2016</h4>
 						<div class="icon">
 						<i class="fa fa-file-pdf-o fa-3x"></i>
