updated fotos and descriptions

--- a/index.html
+++ b/index.html
@@ -15,38 +15,39 @@ navigation_weight: 10
               <li>
                 <img src="img/slides/1.jpg" alt="Ludmila Maruschkewitsch (links) mit der Ärztin Anna und der Krankenschwester Jelena" />
                 <div class="flex-caption">
-					<p>Ludmila Maruschkewitsch (links) mit der Ärztin Anna und der Krankenschwester Jelena</p> 
+					<p>Ludmila Maruschkewitsch (links) mit der Ärztin Anna und der Krankenschwester Jelena</p>
 					<a href="verein.html" class="btn btn-theme">Der Verein</a>
                 </div>
               </li>
               <li>
-                <img src="img/slides/4.jpg" alt="Anastasja aus einem Kinderheim" />
+                <img src="img/slides/4.jpg" alt="Ludmila gibt ihr Wissen an die Kinder weiter" />
                 <div class="flex-caption">
-					<p>Anastasja aus einem Kinderheim.</p> 
+					<p>Ludmila gibt ihr Wissen an die Kinder weiter</p>
 					<a href="vereinstaetigkeit.html" class="btn btn-theme">Vereinstätigkeit</a>
                 </div>
               </li>
               <li>
                 <img src="img/slides/2.jpg" alt="Aufmerksame Eltern" />
                 <div class="flex-caption">
-  					<p>Aufmerksame Eltern</p> 
+  					<p>Aufmerksame Eltern</p>
 					<a href="projektberichte.html" class="btn btn-theme">Projektberichte</a>
                 </div>
               </li>
               <li>
-                <img src="img/slides/3.jpg" alt="Famile Staschkewitsch mit Ruedi Künzi (mitte)" />
+                <img src="img/slides/3.jpg" alt="Die Kinder lernen den Blutzucker selber zu messen" />
                 <div class="flex-caption">
-					<p>Famile Staschkewitsch mit Ruedi Künzi (mitte)</p> 
+					<p>Die Kinder lernen den Blutzucker selber zu messen</p> 
 					<a href="kontakt.html" class="btn btn-theme">Kontakt</a>
                 </div>
               </li>
               <li>
-                <img src="img/slides/5.jpg" alt="Gljeb sagt ein Gedicht auf" />
+                <img src="img/slides/5.jpg" alt="Vergnügen im Hallenbad" />
                 <div class="flex-caption">
-					<p>Gljeb sagt ein Gedicht auf.</p> 
+					<p>Vergnügen im Hallenbad</p>
 					<a href="spenden.html" class="btn btn-theme">Jetzt spenden</a>
                 </div>
-              </li>            </ul>
+              </li>
+            </ul>
         </div>
 	<!-- end slider -->
 			</div>
