Added Twitter link to kontakt page

--- a/kontakt.html
+++ b/kontakt.html
@@ -61,6 +61,8 @@ validate: true
       <div class="col-lg-12">
         <h4>Facebook</h4>
         <p><a href="https://www.facebook.com/belarusdiabetes"><i class="fa fa-facebook"></i> Belarus Diabetes bei Facebook</a></p>
+        <h4>Twitter</h4>
+        <p><a href="https://twitter.com/BelarusDiabetes"><i class="fa fa-twitter"></i> Belarus Diabetes bei Twitter</a></p>
       </div>
     </div>
     <div class="row">
