new nested structure for gallery, added more and prepared images

--- a/src/fotos.html
+++ b/src/fotos.html
@@ -2,26 +2,105 @@
 layout: gallery
 title: Fotos
 navigation_weight: 50
-images:
-- src: img/album/2018/DSCN6223.JPG
-  collection: schulung2018
-  title: Titel 1
-  text: Text zu Bild 1.
-- src: img/album/2018/DSCN6227.JPG
-  collection: schulung2018
-  title: Titel 2
-  text: Text zu Bild 2.
-- src: img/album/2016/DSCN3207.JPG
-  collection: schulung2016
-  title: Titel 3
-  text: Text zu Bild 3.
-- src: img/album/2016/DSCN3218.JPG
-  collection: schulung2016
-  title: Titel 4
-  text: Text zu Bild 4.
-- src: img/album/2016/DSCN3295.JPG
-  collection: schulung2016
-  title: Titel 5
-  text: Text zu Bild 5.
+base_src: img/album
+collections:
+- src: 2018
+  title: Schulung 2018
+  id: schulung2018
+  images:
+  - src: 2018-01.jpg
+    title: Titel 1
+    text: Text zu Bild 1.
+  - src: 2018-02.jpg
+    title: Titel 2
+    text: Text zu Bild 2.
+  - src: 2018-03.jpg
+    title: Titel 5
+    text: Text zu Bild 5.
+  - src: 2018-04.jpg
+    title: ...
+    text: ....
+  - src: 2018-05.jpg
+    title: ...
+    text: ....
+  - src: 2018-06.jpg
+    title: ...
+    text: ....
+  - src: 2018-07.jpg
+    title: ...
+    text: ....
+  - src: 2018-08.jpg
+    title: ...
+    text: ....
+  - src: 2018-09.jpg
+    title: Titel 5
+    text: Text zu Bild 5.
+  - src: 2018-10.jpg
+    title: ...
+    text: ....
+  - src: 2018-11.jpg
+    title: ...
+    text: ....
+  - src: 2018-12.jpg
+    title: ...
+    text: ....
+  - src: 2018-13.jpg
+    title: ...
+    text: ....
+  - src: 2018-20.jpg
+    title: ...
+    text: ....
+  - src: 2018-21.jpg
+    title: Titel 1
+    text: Text zu Bild 1.
+  - src: 2018-22.jpg
+    title: Titel 2
+    text: Text zu Bild 2.
+  - src: 2018-23.jpg
+    title: Titel 5
+    text: Text zu Bild 5.
+  - src: 2018-24.jpg
+    title: ...
+    text: ....
+  - src: 2018-25.jpg
+    title: ...
+    text: ....
+  - src: 2018-26.jpg
+    title: ...
+    text: ....
+  - src: 2018-27.jpg
+    title: ...
+    text: ....
+  - src: 2018-28.jpg
+    title: ...
+    text: ....
+- src: 2016
+  title: Schulung 2016
+  id: schulung2016
+  images:
+  - src: 2016-01.jpg
+    title: Titel 3
+    text: Text zu Bild 3.
+  - src: 2016-02.jpg
+    title: Titel 4
+    text: Text zu Bild 4.
+  - src: 2016-03.jpg
+    title: Titel 5
+    text: Text zu Bild 5.
+  - src: 2016-04.jpg
+    title: ...
+    text: ....
+  - src: 2016-05.jpg
+    title: ...
+    text: ....
+  - src: 2016-06.jpg
+    title: ...
+    text: ....
+  - src: 2016-07.jpg
+    title: ...
+    text: ....
+  - src: 2016-08.jpg
+    title: ...
+    text: ....
 ---
 
