galleries splitted to avoid to have different image ratios

--- a/src/fotos.html
+++ b/src/fotos.html
@@ -5,8 +5,8 @@ navigation_weight: 50
 base_src: img/album
 collections:
 - src: 2018
-  title: Schulung 2018
-  id: schulung2018
+  title: 1. Schulung 2018
+  id: schulung2018-1
   images:
   - src: 2018-01.jpg
     title: Titel 1
@@ -47,6 +47,10 @@ collections:
   - src: 2018-13.jpg
     title: ...
     text: ....
+- src: 2018
+  title: 2. Schulung 2018
+  id: schulung2018-2
+  images:
   - src: 2018-20.jpg
     title: ...
     text: ....
