Added desctriptions for images of 1. Schulung 2018

--- a/src/fotos.html
+++ b/src/fotos.html
@@ -9,44 +9,44 @@ collections:
   id: schulung2018-1
   images:
   - src: 2018-01.jpg
-    title: Titel 1
-    text: Text zu Bild 1.
+    title: Ernährung
+    text: Eine ausgewogene Ernährung ist wichtig.
   - src: 2018-02.jpg
-    title: Titel 2
-    text: Text zu Bild 2.
+    title: Im Schwimmbad
+    text: Zwischen den Lerneinheiten können sich die Kinder im Schwimmbad vergnügen.
   - src: 2018-03.jpg
-    title: Titel 5
-    text: Text zu Bild 5.
+    title: Schulung
+    text: Viele Eltern sind dankbar, wenn sie eine gute Schulungbesuchenkönnen.
   - src: 2018-04.jpg
-    title: ...
-    text: ....
+    title: Schulung
+    text: Ljudmila Maruschkewitsch ist selber auch Diabetikerin.
   - src: 2018-05.jpg
-    title: ...
-    text: ....
+    title: Schulung
+    text:  Eltern wissen oft wenig über die verschiedenen Inhaltstoffe in den Lebensmitteln.
   - src: 2018-06.jpg
-    title: ...
-    text: ....
+    title: Ernährung
+    text: Gemeinsames Essen.
   - src: 2018-07.jpg
-    title: ...
-    text: ....
+    title: Spielen
+    text: In den Pausen darf das Spielen nicht zu kurz kommen.
   - src: 2018-08.jpg
-    title: ...
-    text: ....
+    title: Schulung
+    text: Aufmerksame Eltern.
   - src: 2018-09.jpg
-    title: Titel 5
-    text: Text zu Bild 5.
+    title: Messung
+    text: Bestimmung des Blutzuckerspiegels.
   - src: 2018-10.jpg
-    title: ...
-    text: ....
+    title: Medikamente
+    text: Der Umgang mit der Krankheit muss gelernt sein.
   - src: 2018-11.jpg
-    title: ...
-    text: ....
+    title: Kinder
+    text: Ihre Spende ermöglicht den Kindern ein normales Leben!
   - src: 2018-12.jpg
-    title: ...
-    text: ....
+    title: Gruppenfoto
+    text: Die Schulungen ermölichen auch den Austausch mit andern Betroffenen.
   - src: 2018-13.jpg
-    title: ...
-    text: ....
+    title: Kinder mit ihren Eltern
+    text: Die Schulungen ermöglichen ein aktives Leben mit Diabetes.
 - src: 2018
   title: 2. Schulung 2018
   id: schulung2018-2
